# Scope

./: .current-branch.txt  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .hb_now.txt  .hb_status_lines.txt  .hb_status_now.json  .heartbeat_status_summary.txt  .heartbeat_summary.txt  .pre-commit-config.yaml  .secrets.baseline  ADMIN_DASHBOARD.md  AGENTS.md  BOOTSTRAP.md  CODEX_PROMPTS.md  CONTRIBUTING.md  EXPANSION_BLUEPRINT.md  HEARTBEAT.md  HEARTBEAT.md.pretrim  IDENTITY.md  PHASE_TRACKING.md  PROGRESS.md  PROGRESS.md.pretrim  README.md  RESEARCH.md  SECURITY.md  SOUL.md  TOOLS.md  USER.md  atlas_architecture.tex  auth-profiles.json  docker-compose.gpu.yml  docker-compose.yml  hb_min_snapshot.txt  scope_architecture.tex  tmp_agents_running.txt  tmp_current_agent_key.txt  tmp_frontend_phase.txt  tmp_hb_2130.txt  (+22 more)
.clawhub/: lock.json
.github/: CODEOWNERS  dependabot.yml  gitleaks.toml  pull_request_template.md
.openclaw/: workspace-state.json
Atlas.Core/: Atlas.Core.sln  Directory.Build.props  Dockerfile  README.md
Scope.Core/: .dockerignore  Dockerfile  Dockerfile.dockerignore  README.md  Scope.Core.sln  coverlet.runsettings
atlas-android/: .gitignore  README.md  gradle.properties  settings.gradle.kts
atlas-assets/: DESIGN-SPEC.md  design-tokens.css
atlas-cli/: Cargo.toml  Dockerfile
atlas-cli/src/: main.rs
atlas-frontend/: .env.example  .gitignore  Dockerfile  QA-REPORT.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
atlas-frontend/wasm/: .gitignore  CMakeLists.txt  README.md
atlas-frontend/wasm/src/: atlas_wasm.cpp
atlas-ios/: .gitignore  Package.swift  README.md  project.yml
atlas-metrics/: .gitignore  Dockerfile  app.py  go.mod  go.sum  requirements.txt
atlas_content/: .env.example  Dockerfile  bootstrap_content.py  bootstrap_content_append.py  bootstrap_content_append2.py  bootstrap_content_append3.py  bootstrap_content_append4.py  conftest.py  manage.py  materialize.ps1  pytest.ini  requirements.txt
atlas_geo/: .gitignore  CMakeLists.txt  README.md  __init__.py
atlas_geo/include/atlas_geo/: cluster.hpp  core.hpp  haversine.hpp  hull.hpp  pathfinding.hpp  rtree.hpp
atlas_geo/python/: CMakeLists.txt  README.md  atlas_geo_bindings.cpp
atlas_geo/src/: cluster.cpp  core.cpp  haversine.cpp  hull.cpp  pathfinding.cpp  rtree.cpp
atlas_geo/tests/: CMakeLists.txt  README.md  cluster_test.cpp  haversine_test.cpp  hull_test.cpp  pathfinding_test.cpp  rtree_test.cpp  test_bindings.py
atlas_intel/: Dockerfile  config.py  requirements.txt
atlas_media/: .gitignore  Makefile  build.py  makefile  python_bindings.py  readme.md
content/: .next_task.txt  .singleline.txt  HEARTBEAT.md  PROGRESS.md  agents.md
core/: HEARTBEAT.md  PROGRESS.md  agents.md
docs/: API-REFERENCE.md  DEPLOYMENT.md  EDGE-ROUTE-CACHE-OWNERSHIP.md  FINAL-RELEASE-GATE-PHASE9.md  NOTIFICATIONS-PLATFORM.md  PREDEPLOY-HANDOFF.md  PRODUCTION-CERTIFICATION-PHASE1.md  PRODUCTION-CERTIFICATION-PHASE2.md  PRODUCTION-CERTIFICATION-PHASE3.md  PRODUCTION-CERTIFICATION-PHASE4.md  PRODUCTION-CERTIFICATION-PHASE5.md  PRODUCTION-CERTIFICATION-PHASE6.md  PRODUCTION-CERTIFICATION-PHASE8.md  PRODUCTION-CERTIFICATION-PHASE9.md  PRODUCTION-HARDENING.md  RELEASE-RUNBOOK.md  SCOPETRIPS-LAUNCH.md  SDLC-CONTROLS.md  SDLC.md
foundation/: HEARTBEAT.md  PROGRESS.md  agents.md
frontend/: HEARTBEAT.md  PROGRESS.md  agents.md
intel/: HEARTBEAT.md  PROGRESS.md  TOOLS.md  agents.md
k8s/: 00-cert-manager-issuer.yaml  01-namespace.yaml  02-configmap.yaml  03-secret.example.yaml  04-sqlserver.yaml  05-kafka.yaml  05-runtime-dependencies.yaml  06-applications.yaml  07-edge.yaml  08-monitoring.yaml  09-network-policies.yaml
memory/: 2026-03-27-foundation-files.md  2026-03-27-identity-name.md  2026-03-27-identity-role.md  2026-03-27-session-greeting.md  2026-03-28.md  2026-04-19.md  COMPLETED-TASKS.md  LESSONS.md
monitoring/: prometheus.yml
nginx/: Certbot.Dockerfile  Dockerfile  nginx.conf  security-headers.conf
polish/: PROGRESS.md  agents.md
scope-admin/: .dockerignore  .env.example  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  prettier.config.cjs  tailwind.config.ts  tsconfig.json  vite.config.ts
scope-android/: README.md  settings.gradle.kts
scope-assets/: DESIGN-SPEC.md  design-tokens.css
scope-cli/: Cargo.toml  Dockerfile
scope-cli/src/: main.rs
scope-frontend/: .env.example  .gitignore  Dockerfile  Dockerfile.dockerignore  QA-REPORT.md  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
scope-frontend/wasm/: .gitignore  CMakeLists.txt  README.md
scope-frontend/wasm/src/: scope_ai_lexer.hpp  scope_wasm.cpp
scope-frontend/wasm/tests/: scope_ai_lexer_test.cpp
scope-ios/: .gitignore  Package.swift  README.md  project.yml
scope-metrics/: .gitignore  Dockerfile  coverage-current.out  go.mod  go.sum
scope-proto/: .gitignore  buf.gen.yaml  generate.ps1  generate.sh
scope-rag/: .dockerignore  .env.example  Dockerfile  requirements.txt
scope-site/: .dockerignore  Dockerfile  README.md  eslint.config.mjs  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
scope_content/: .dockerignore  .env.example  Dockerfile  conftest.py  coverage-production-current.json  coverage-production.xml  manage.py  pytest.ini  requirements.txt
scope_geo/: CMakeLists.txt  README.md  __init__.py  pytest.ini
scope_geo/include/scope_geo/: cluster.hpp  core.hpp  haversine.hpp  hull.hpp  pathfinding.hpp  rtree.hpp
scope_geo/python/: CMakeLists.txt  README.md  scope_geo_bindings.cpp
scope_geo/src/: cluster.cpp  core.cpp  haversine.cpp  hull.cpp  pathfinding.cpp  rtree.cpp
scope_geo/tests/: CMakeLists.txt  README.md  cluster_test.cpp  haversine_test.cpp  hull_test.cpp  pathfinding_test.cpp  rtree_test.cpp  test_bindings.py
scope_intel/: .dockerignore  Dockerfile  (+3 more)
(+1612 files in other folders)
