[package]
name = "atlas-cli"
version = "0.1.0"
edition = "2021"
autobins = false
description = "Rust CLI scaffold for Atlas cross-service operations"
license = "UNLICENSED"

[[bin]]
name = "atlas"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
