[package]
name = "scope-cli"
version = "0.1.0"
edition = "2021"
autobins = false
description = "Rust CLI toolkit for Scope cross-service operations"
license = "UNLICENSED"

[[bin]]
name = "scope"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.2"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiberius = { version = "0.12", default-features = false, features = ["rustls", "tds73"] }
tokio = { version = "1.44", features = ["macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }

[dev-dependencies]
tempfile = "3.14"
